put the social links in a separate partial (ugly whitespace there needs to be fixed)

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -255,3 +255,6 @@ select {
     padding:0 !important;
     margin:0 !important;
 }
+.admin {
+    padding-top:80px;
+}
